--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -600,7 +600,7 @@
 							<!-- under windows, each build would update the license files because 
 								of different fine endings. That's the main reason why we don't try updating 
 								at all -->
-							<skipUpdateProjectLicense>false</skipUpdateProjectLicense>
+							<skipUpdateLicense>true</skipUpdateLicense>
 							<licenseName>${license.name}</licenseName>
 							<roots>
 								<root>src/main/java</root>
@@ -697,51 +697,6 @@
 	</build>
 
 	<profiles>
-
-		<!-- If there is a "webapp" directory, this profile will activate and put 
-			the content into a zip file this was (and still is in some legacy projects!) 
-			used to create web folders for different modules which can in the end be 
-			all mashed into one. -->
-		<profile>
-			<id>webapp-dir-legacy</id>
-			<activation>
-				<file>
-					<exists>src/main/webapp</exists>
-				</file>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<dependencies>
-							<dependency>
-								<!-- these are the de.metas.assemblies:de.metas.assemblies:1.0.0 
-									of ye olden days. they contain the webapp_dir which our modern assemblies 
-									do not contain anymore -->
-								<groupId>de.metas</groupId>
-								<artifactId>metasfresh-legacy-assemblies</artifactId>
-								<version>1.0.0</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>make-webapp-dir-assembly</id> <!-- this is used for inheritance merges -->
-								<phase>package</phase> <!-- bind to the packaging phase -->
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<descriptorRefs>
-										<descriptorRef>webapp_dir</descriptorRef>
-									</descriptorRefs>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
 		<profile>
 			<!-- If there is a maven java-gen sources directory, this profile will 
 				activate and add the directory as another sources directory -->
