--- a/frontend/package.json
+++ b/frontend/package.json
@@ -128,6 +128,7 @@
     "bootstrap": "4.3.1",
     "bundle-loader": "0.5.6",
     "classnames": "2.2.6",
+    "connected-react-router": "6.8.0",
     "copy-webpack-plugin": "5.1.1",
     "counterpart": "0.18.6",
     "current-device": "0.10.0",
@@ -135,7 +136,8 @@
     "detect-browser": "4.8.0",
     "file-loader": "2.0.0",
     "google-map-react": "1.1.5",
-    "immer": "^6.0.5",
+    "history": "4.10.1",
+    "immer": "6.0.5",
     "immutability-helper": "2.1.2",
     "immutable": "4.0.0-rc.12",
     "intro.js": "2.9.3",
@@ -149,6 +151,8 @@
     "pigeon-maps": "0.14.0",
     "pigeon-marker": "0.3.4",
     "prop-types": "15.7.2",
+    "qhistory": "^1.0.3",
+    "qs": "6.9.4",
     "quagga": "0.12.1",
     "query-string": "6.11.0",
     "rc-hammerjs": "0.6.9",
@@ -170,14 +174,14 @@
     "react-numeric-input": "2.2.3",
     "react-onclickoutside": "6.9.0",
     "react-popper": "1.3.6",
-    "react-redux": "6.0.1",
-    "react-router": "3.2.0",
-    "react-router-redux": "4.0.8",
+    "react-redux": "7.2.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-tagsinput": "3.19.0",
     "react-tether": "1.0.4",
     "react-translate-component": "0.15.1",
-    "redux": "3.7.2",
-    "redux-actions": "2.3.0",
+    "redux": "4.0.5",
+    "redux-actions": "2.6.5",
     "redux-dynamic-reducer": "2.0.2",
     "redux-promise": "0.6.0",
     "redux-test-utils": "0.3.0",
@@ -188,6 +192,7 @@
     "throttle-debounce": "2.1.0",
     "timer-machine": "1.1.0",
     "uuid": "3.3.2",
-    "webpack-git-hash": "1.0.2"
+    "webpack-git-hash": "1.0.2",
+    "why-did-you-update": "^1.0.8"
   }
 }
