add stuff for running dev-frontend

--- a/distribution/src/main/resources-filtered/v1/docker-compose.yml
+++ b/distribution/src/main/resources-filtered/v1/docker-compose.yml
@@ -38,11 +38,11 @@ webapi:
     - search:search
   expose:
     - "8789"
-# to access the webui-api directly 
-# (eg. for debugging or connecting your app to the metasfresh api) 
-# uncomment following port:
-  #ports:
-   #- "8080:8080"
+    # to access the webui-api directly
+    # (eg. for debugging or connecting your app to the metasfresh api)
+    # uncomment following port:
+    #ports:
+    #- "8080:8080"
   restart: always
   volumes:
     - ./volumes/webapi/log:/opt/metasfresh-webui-api/log:rw
@@ -54,14 +54,28 @@ webui:
     - webapi:webapi
   ports:
     - "80:80"
-    - "443:443"
   restart: always
   volumes:
     - /etc/localtime:/etc/localtime:ro
     - /etc/timezone:/etc/timezone:ro
   #uncomment and set to URL where metasfresh will be available from browsers
-  #environment:
+  environment:
     #- WEBAPI_URL=http://example.com:8080
+
+    # Set the base URL for the webui-api server as seen from the client web browser.
+    # Note that the webui-frontend itself does *not* need to be able to access the API;
+    # It merely communicates this URL to your web browser which accesses the API directly.
+    - WEBUI_API_CLIENT_PROTOCOL: "http"
+    - WEBUI_API_CLIENT_HOST: "localhost"
+    - WEBUI_API_CLIENT_PORT: '8080'
+
+    # Set the base URL for the webui-api server as seen from the frontend http server.
+    # I found the IP 10.0.2.202 using ipconfig on my host machine/desktop; yours might be different
+    - WEBUI_API_PROXYPASS_PROTOCOL: "http"
+    - WEBUI_API_PROXYPASS_HOST: "10.0.2.202"
+    - WEBUI_API_PROXYPASS_PORT: '8080'
+
+    - DEBUG_CAT_NGINX_CONF_FILE: 'y' # the default, is 'n'; everything besides 'n' makes the startup script cat the nginx config file
 rabbitmq:
   build: rabbitmq
   expose:
@@ -86,12 +100,12 @@ search:
       hard: 65536
   cap_add:
     - IPC_LOCK
-# to access the search api directly
-# (e.g. if you did docker-compose up search to have the deachboard with your locally running metasfresh services)
-# uncomment following ports:
-# ports:
-#   - "9200:9200"
-#   - "9300:9300"
+  # to access the search api directly
+  # (e.g. if you did docker-compose up search to have the deachboard with your locally running metasfresh services)
+  # uncomment following ports:
+  # ports:
+  #   - "9200:9200"
+  #   - "9300:9300"
   volumes:
     - ./volumes/search/data:/usr/share/elasticsearch/data
     - /etc/localtime:/etc/localtime:ro
