--- a/distribution/src/main/resources-filtered/docker-compose-v1/db/Dockerfile
+++ b/distribution/src/main/resources-filtered/docker-compose-v1/db/Dockerfile
@@ -1,4 +1,4 @@
-FROM metasfresh/metasfresh-db:${docker-tag.metasfresh.version}
+FROM docker.metasfresh.com/metasfresh/metasfresh-db:${docker-tag.metasfresh.version}
 
 RUN localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8
 RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
