attempt properly create the build's database

--- a/distribution/src/main/resources-filtered/docker-compose-v1/docker-compose.yml
+++ b/distribution/src/main/resources-filtered/docker-compose-v1/docker-compose.yml
@@ -10,6 +10,7 @@ db:
     - METASFRESH_USERNAME=metasfresh
     - METASFRESH_PASSWORD=metasfresh
     - METASFRESH_DBNAME=metasfresh
+    - POSTGRES_PASSWORD=change_me
     - DB_SYSPASS=System
 app:
   build: app
