--- a/distribution/src/main/resources-filtered/docker-compose-v1/webapi/Dockerfile
+++ b/distribution/src/main/resources-filtered/docker-compose-v1/webapi/Dockerfile
@@ -1,9 +1,10 @@
 FROM docker.metasfresh.com/metasfresh/metasfresh-webui-api:${docker-tag.metasfresh.version}
 
 COPY sources/configs/* /opt/metasfresh-webui-api/
-COPY sources/start_webapi.sh /opt/metasfresh-webui-api/
-RUN chmod 700 /opt/metasfresh-webui-api/start_webapi.sh
 
-ENTRYPOINT ["/opt/metasfresh-webui-api/start_webapi.sh"]
+# by default go with the start script baked into the base image
+#COPY sources/start_webapi.sh /opt/metasfresh-webui-api/
+#RUN chmod 700 /opt/metasfresh-webui-api/start_webapi.sh
+#ENTRYPOINT ["/opt/metasfresh-webui-api/start_webapi.sh"]
 
 EXPOSE 8080
